# agent-buddy

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: AGENT_SOURCE_IMPORT.md  BROWSER_AUTOMATION_REFERENCE_REVIEW.md  BUDDY_BROWSER_RUNTIME_ROADMAP.md  CC_SWITCH_BORROWING_PLAN.md  COMMERCIAL_PRODUCT_ARCHITECTURE.md  CONSOLE_BACKEND_AGGREGATION.md  CONSOLE_FULL_MENU_IMPLEMENTATION.md  CONSOLE_LAYOUT_REFINEMENT.md  FEATURE_COMPLETION_TRACKER.md  FINAL_CONSOLE_MENU_IMPLEMENTATION.md  FINAL_MENU_PAGE_COMPLETION_MATRIX.md  FINAL_MENU_WIREFRAMES.md  IMPLEMENTATION_STRATEGY.md  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapter_manifest.rs  adapters.rs  approval.rs  audit.rs  buddy_audit.rs  buddy_browser.rs  buddy_policy.rs  bundle.rs  bundle_catalog.rs  bundle_diff.rs  console_core.rs  database.rs  deeplink.rs  doctor.rs  domain.rs  generated.rs  inspector.rs  installer.rs  instance.rs  instruction.rs  knowledge.rs  knowledge_package.rs  lib.rs  lifecycle.rs  local_api.rs  local_daemon.rs  local_store.rs  main.rs  marketplace.rs  mcp.rs  mcp_config.rs  memory.rs  memory_sync.rs  paas.rs  risk.rs  runtime.rs  runtime_config.rs  runtime_doctor.rs  runtime_execution.rs  runtime_status.rs  (+8 more)
src-tauri/src/runtime_adapters/: aider.rs  antigravity.rs  claude_code.rs  codewhale.rs  codex.rs  copilot.rs  cursor.rs  deerflow.rs  gemini_cli.rs  generation.rs  hermes.rs  kiro.rs  mod.rs  openclaw.rs  opencode.rs  qoder.rs  qwen.rs  trae.rs  windsurf.rs  workbuddy.rs
(+33 files in other folders)
