[package]
name = "agent-buddy"
version = "0.1.0"
description = "Local-first agent bundle installer and runtime adapter layer"
authors = ["partme-ai"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "agent_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
